--- a/index.html
+++ b/index.html
@@ -1,3 +1,47 @@
-<html>
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HOME</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='//fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Antic Didone' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Special Elite' rel='stylesheet'>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  </head>
+  <body>
+
+    <div class="nav">
+     <div class="head" align="center">
+       <span class="main">
+         <a href="index.html" class="title">Samiha's Portfolio</a>
+       </span>
+       <span class="buttons">
+         <a href="index-2.html" class="button" id="about">About</a>
+         <a href="index-3.html" class="button" id="resume">Resume</a>
+         <a href="index-4.html" class="button" id="projects">Projects</a>
+         <a href="index-5.html" class="button" id="contact">Contact</a>
+       </span>
+      </div>
+    </div>
+
+
+    <div class="col-xs-6" id="quote">
+      <p class="s-quote">Language is a profound concept.</p>
+      <p class="s-quote">Communication exists in everything; it shines in the larger ideas and hides in the smaller details.</p>
+      <p class="s-quote">The strongest connections are created by expression through creation.</p>
+      <p class="s-quote">Creating is the way I choose to leave an impact on the world.</p>
+    </div>
+
+  </body>
 </html>
