Add Resume page

--- a/resume/index.html
+++ b/resume/index.html
@@ -22,25 +22,17 @@
   <body>
 
     <div class="nav">
-     <div class="head" align="center">
-       <span class="main">
-         <a href="index.html" class="title">Samiha's Portfolio</a>
-       </span>
-       <span class="buttons">
-         <a href="index-2.html" class="button" id="about">About</a>
-         <a href="/resume/" class="button" id="resume">Resume</a>
-         <a href="index-4.html" class="button" id="projects">Projects</a>
-         <a href="index-5.html" class="button" id="contact">Contact</a>
-       </span>
+      <div class="head" align="center">
+        <span class="main">
+          <a href="index.html" class="title">Samiha's Portfolio</a>
+        </span>
+        <span class="buttons">
+          <a href="index-2.html" class="button" id="about">About</a>
+          <a href="index-3.html" class="button" id="resume">Resume</a>
+          <a href="index-4.html" class="button" id="projects">Projects</a>
+          <a href="index-5.html" class="button" id="contact">Contact</a>
+        </span>
       </div>
-    </div>
-
-
-    <div class="col-xs-6" id="quote">
-      <p class="s-quote">Language is a profound concept.</p>
-      <p class="s-quote">Communication exists in everything; it shines in the larger ideas and hides in the smaller details.</p>
-      <p class="s-quote">The strongest connections are created by expression through creation.</p>
-      <p class="s-quote">Creating is the way I choose to leave an impact on the world.</p>
     </div>
 
   </body>
