Fix link to resume 😁

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        </span>
        <span class="buttons">
          <a href="index-2.html" class="button" id="about">About</a>
-         <a href="/resume/" class="button" id="resume">Resume</a>
+         <a href="/resume/index.html" class="button" id="resume">Resume</a>
          <a href="index-4.html" class="button" id="projects">Projects</a>
          <a href="index-5.html" class="button" id="contact">Contact</a>
        </span>
