--- a/resume/index.html
+++ b/resume/index.html
@@ -24,11 +24,11 @@
     <div class="nav">
       <div class="head" align="center">
         <span class="main">
-          <a href="index.html" class="title">Samiha's Portfolio</a>
+          <a href="/index.html" class="title">Samiha's Portfolio</a>
         </span>
         <span class="buttons">
           <a href="index-2.html" class="button" id="about">About</a>
-          <a href="index-3.html" class="button" id="resume">Resume</a>
+          <a href="/resume/index.html" class="button" id="resume">Resume</a>
           <a href="index-4.html" class="button" id="projects">Projects</a>
           <a href="index-5.html" class="button" id="contact">Contact</a>
         </span>
