--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="nav">
      <div class="head" align="center">
        <span class="main">
-         <a href="index.html" class="title">Samiha's Portfolio</a>
+         <a href="/index.html" class="title">Samiha's Portfolio</a>
        </span>
        <span class="buttons">
          <a href="index-2.html" class="button" id="about">About</a>
