Creation of pages

--- a/resume/index.html
+++ b/resume/index.html
@@ -27,10 +27,10 @@
           <a href="/index.html" class="title">Samiha's Portfolio</a>
         </span>
         <span class="buttons">
-          <a href="index-2.html" class="button" id="about">About</a>
-          <a href="/resume/index.html" class="button" id="resume">Resume</a>
-          <a href="index-4.html" class="button" id="projects">Projects</a>
-          <a href="index-5.html" class="button" id="contact">Contact</a>
+          <a href="/About/index.html" class="button" id="about">About</a>
+          <a href="/Resume/index.html" class="button" id="resume">Resume</a>
+          <a href="/Projects/index.html" class="button" id="projects">Projects</a>
+          <a href="/Contact/index.html" class="button" id="contact">Contact</a>
         </span>
       </div>
     </div>
