--- a/Projects/index.html
+++ b/Projects/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HOME</title>
+    <title>PROJECTS</title>
     <link rel="stylesheet" href="style.css">
     <link href='//fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
     <link href='//fonts.googleapis.com/css?family=Antic Didone' rel='stylesheet'>
