--- a/About/index.html
+++ b/About/index.html
@@ -1,9 +1,9 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HOME</title>
+    <title>ABOUT</title>
     <link rel="stylesheet" href="style.css">
     <link href='//fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
     <link href='//fonts.googleapis.com/css?family=Antic Didone' rel='stylesheet'>
