--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
          <a href="/index.html" class="title">Samiha's Portfolio</a>
        </span>
        <span class="buttons">
-           <a href="/about/index.html" class="button" id="about">About</a>
-           <a href="/resume/index.html" class="button" id="resume">Resume</a>
-           <a href="/projects/index.html" class="button" id="projects">Projects</a>
-           <a href="/contact/index.html" class="button" id="contact">Contact</a>
+           <a href="about/index.html" class="button" id="about">About</a>
+           <a href="resume/index.html" class="button" id="resume">Resume</a>
+           <a href="projects/index.html" class="button" id="projects">Projects</a>
+           <a href="contact/index.html" class="button" id="contact">Contact</a>
        </span>
       </div>
     </div>
