--- a/Projects/index.html
+++ b/Projects/index.html
@@ -22,16 +22,16 @@
   <body>
 
     <div class="nav">
-      <div class="head" align="center">
-        <span class="main">
-          <a href="/index.html" class="title">Samiha's Portfolio</a>
-        </span>
-        <span class="buttons">
-            <a href="/about/index.html" class="button" id="about">About</a>
-            <a href="/resume/index.html" class="button" id="resume">Resume</a>
-            <a href="/projects/index.html" class="button" id="projects">Projects</a>
-            <a href="/contact/index.html" class="button" id="contact">Contact</a>
-        </span>
+     <div class="head" align="center">
+       <span class="main">
+         <a href="/index.html" class="title">Samiha's Portfolio</a>
+       </span>
+       <span class="buttons">
+           <a href="/about/index.html" class="button" id="about">About</a>
+           <a href="/resume/index.html" class="button" id="resume">Resume</a>
+           <a href="projects" class="button" id="projects">Projects</a>
+           <a href="/contact/index.html" class="button" id="contact">Contact</a>
+       </span>
       </div>
     </div>
 
