--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <span class="buttons">
            <a href="/about/index.html" class="button" id="about">About</a>
            <a href="/resume/index.html" class="button" id="resume">Resume</a>
-           <a href="/projects/index.html" class="button" id="projects">Projects</a>
+           <a href="projects" class="button" id="projects">Projects</a>
            <a href="/contact/index.html" class="button" id="contact">Contact</a>
        </span>
       </div>
