--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
          <a href="/index.html" class="title">Samiha's Portfolio</a>
        </span>
        <span class="buttons">
-           <a href="/about/index.html" class="button" id="about">About</a>
+           <a href="/About/index.html" class="button" id="about">About</a>
            <a href="/resume/index.html" class="button" id="resume">Resume</a>
-           <a href="projects" class="button" id="projects">Projects</a>
+           <a href="/Projects/index.html" class="button" id="projects">Projects</a>
            <a href="/contact/index.html" class="button" id="contact">Contact</a>
        </span>
       </div>
