--- a/About/index.html
+++ b/About/index.html
@@ -35,5 +35,7 @@
       </div>
     </div>
 
+    <p class="summ"><img src="file:///Users/admin/Desktop/samihahussen.jpg.png" alt="Samiha" width="200" height="200" align="left" id="imgme">
+
   </body>
 </html>
